add skipRead to jmh, test hot path
Signed-off-by: Asim Mahmood <asim.seng@gmail.com>